# openMP-CUDA

./: CMakeLists.txt  README.md  dijkstra.cpp  dijkstra.cu  dijkstra.h  graphGenerator.cpp  graphGenerator.h  graph_40.json  main.cpp  results.py  resultsOMP.txt  visualize.py
